Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77204

tst_QQmlEngineDebugService::jsonData() failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.14.0 Alpha
    • 5.14.0 Alpha
    • QML: Tooling
    • None
    • All
    • 31ffc7bf2a0efe40116764a8c84939d2df4cdeae (qt/qtbase/dev)

      https://codereview.qt-project.org/c/qt/qt5/+/267105 Update submodules on 'dev' in qt5 - PS53

      http://coin/coin/integration/qt/qt5/tasks/1564159322

      http://coin/coin/api/results/qt/qtdeclarative/63095d57f307bb9b90ab90e5dde98ae23e539c46/LinuxUbuntu_18_04x86_64LinuxUbuntu_18_04x86_64GCCqtci-linux-Ubuntu-18.04-x86_64-f646e4Documentation_OutOfSourceBuild/f1ce601f37b2db06080acc21863711e164d2e407/test_1564159580/log.txt.gz

      agent:2019/07/26 17:34:49 build.go:207: FAIL!  : tst_QQmlEngineDebugService::jsonData() Compared values are not the same
      agent:2019/07/26 17:34:49 build.go:207:    Actual   (findProperty(obj.properties, "data").value)                                                         : QVariant(QVariantMap,<value not representable as string>)
      agent:2019/07/26 17:34:49 build.go:207:    Expected (QJsonDocument::fromJson("{\"a\":null,\"c\":\"fffff\",\"foo\":12,\"ttt\":[4,5,4,3,2]}") .toVariant()): QVariant(QVariantMap,<value not representable as string>)
      agent:2019/07/26 17:34:49 build.go:207:    Loc: [tst_qqmlenginedebugservice.cpp(978)]
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            shausman Simon Hausmann
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes